visual-style structured comment support (closes #1)

--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@ hopefully to follow soon.</p>
 generated from CoNLL-U formatted input:</p>
 
 <code class="conllu-parse" tabs="yes"><pre>
+# visual-style	1	bgColor:blue
+# visual-style	2 1 nsubj	color:blue
 1	They	they	PRON	PRN	Case=Nom|Num=Plur	2	nsubj	4:nsubj	_
 2	buy	buy	VERB	VBP	Num=Plur|Per=3|Tense=Pres	0	root	_	_
 3	and	and	CONJ	CC	_	2	cc	_	_
