Set sentence label width by guesstimating max (fixes #7)

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@ two "structured comments", <code>visual-style</code> and
 # sentence-label B
 1	buy	buy	VERB	VBP	Num=Plur|Per=3|Tense=Pres	0	root	_	_
 
+# sentence-label WIDE LABEL
+1	buy	buy	VERB	VBP	Num=Plur|Per=3|Tense=Pres	0	root	_	_
+
 </pre></code>
 
 <p>Also, please see
