--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ two "structured comments", <code>visual-style</code> and
 # visual-style 1	bgColor:blue
 # visual-style 1	fgColor:white
 # visual-style 2 1 nsubj	color:blue
+# visual-style 4 1 nsubj	labelArrow:triangle,10,3
 1	They	they	PRON	PRN	Case=Nom|Num=Plur	2	nsubj	4:nsubj	_
 2	buy	buy	VERB	VBP	Num=Plur|Per=3|Tense=Pres	0	root	_	_
 3	and	and	CONJ	CC	_	2	cc	_	_
