add waypoints library

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Dependencies</a> for an example of a project using the library.</p>
         root + 'lib/ext/jquery.svg.min.js',
         root + 'lib/ext/jquery.svgdom.min.js',
         root + 'lib/ext/jquery-ui.min.js',
+        root + 'lib/ext/waypoints.min.js',
 
         // brat helper modules
         root + 'lib/brat/configuration.js',
