--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ two "structured comments", <code>visual-style</code> and
 
 </pre></code>
 
+<p>Here are some more tests:
+<a href="tests.html">tests.html</a></p>
+
 <p>Also, please see
 <a href="http://universaldependencies.github.io/docs/">Universal
 Dependencies</a> for an example of a project using the library.</p>
@@ -70,12 +73,6 @@ Dependencies</a> for an example of a project using the library.</p>
       </div>
     </div>
   </div>
-
-<!--   <footer class="site-footer"> -->
-<!--     <div class="wrap"> -->
-<!--       <p style="float:right">(c) 2014 Sampo Pyysalo(s)</p> -->
-<!--     </div> -->
-<!--   </footer> -->
 
 </body>
 
