fix broken test

--- a/tests.html
+++ b/tests.html
@@ -53,7 +53,7 @@ the CoNLL-U format.</p>
 4     to         à        ADP    _   _                          6   case   _   to
 5     the        le       DET    _   Definite=Def|Number=Plur   6   det    _   the
 6     children   enfant   NOUN   _   Gender=Masc|Number=Plur    1   nmod   _   children
-</div>
+</pre></code>
 
 <h2>Valid examples:</h2>
 
