style wildcards and short-form colors (closes #12)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@ two "structured comments", <code>visual-style</code> and
 6	.	.	PUNCT	.	_	2	punct	_	_
 
 # sentence-label B
+# visual-style arcs red
+# visual-style nodes red
 1	buy	buy	VERB	VBP	Num=Plur|Per=3|Tense=Pres	0	root	_	_
+2	books	book	NOUN	NNS	Num=Plur	1	dobj	_	_
 
 # sentence-label WIDE LABEL
 1	buy	buy	VERB	VBP	Num=Plur|Per=3|Tense=Pres	0	root	_	_
